# MyFileInfo

./: .gitignore  CMakeLists.txt  README.md  TextWindow.cc  main.cc
MyFileInfo/: File.cc  File.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyFiles.pro  TextWindow.cc  TextWindow.h  icon.xpm  main.cc
include/MyFileInfo/: File.h  File.hpp  MainWindow.h  MainWindow.hpp  TextWindow.h  TextWindow.hpp
resources/: MainWindow.ui  icon.qrc
src/: File.cc  File.cpp  MainWindow.cpp  TextWindow.cc  TextWindow.cpp  main.cc  main.cpp
